iptables_rules
# Generated by iptables-save v1.4.6 on Sun Jan 24 12:33:32 2010
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [295:32911]
:interfaces - [0:0]
:open - [0:0]
-A INPUT -p icmp -m icmp --icmp-type 18 -j DROP 
-A INPUT -p icmp -m icmp --icmp-type 17 -j DROP 
-A INPUT -p icmp -m icmp --icmp-type 10 -j DROP 
-A INPUT -p icmp -m icmp --icmp-type 9 -j DROP 
-A INPUT -p icmp -m icmp --icmp-type 5 -j DROP 
-A INPUT -p icmp -j ACCEPT 
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A INPUT -j interfaces 
-A INPUT -j open 
-A INPUT -p tcp -j REJECT --reject-with tcp-reset 
-A INPUT -p udp -j REJECT --reject-with icmp-port-unreachable 
-A INPUT -p tcp -m tcp ! --tcp-flags FIN,SYN,RST,ACK SYN -m state --state NEW -j DROP 
-A INPUT -f -j DROP 
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,SYN,RST,PSH,ACK,URG -j DROP 
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG NONE -j DROP 
-A INPUT -i eth0 -p icmp -m icmp --icmp-type 8 -j DROP 
-A INPUT -i eth0 -p tcp -m multiport --dports 53,113,135,137,139,445 -j DROP 
-A INPUT -i eth0 -p udp -m multiport --dports 53,113,135,137,139,445 -j DROP 
-A INPUT -i eth0 -p udp -m udp --dport 1026 -j DROP 
-A INPUT -i eth0 -p tcp -m multiport --dports 1433,4899 -j DROP 
-A INPUT -d 255.255.255.255/32 -i eth0 -j DROP 
-A INPUT -d 10.1.255.255/32 -i eth0 -j DROP 
-A interfaces -i lo -j ACCEPT 
-A interfaces -i eth0 -j ACCEPT 
-A open -p tcp -m tcp --dport 22 -j ACCEPT 
-A open -i eth0 -p tcp -m tcp --dport 3306 -j REJECT --reject-with icmp-port-unreachable 
COMMIT
# Completed on Sun Jan 24 12:33:32 2010
